--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# input data and models
+input/
+models/
+
+# data files
+*.csv
+*.h5
+*.plk
+*.pth
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
